[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/scaffold/assets/images/gui/godot_logo_about.png" type="Texture" id=2]
[ext_resource path="res://addons/scaffold/src/gui/screens/CreditsScreen.gd" type="Script" id=3]
[ext_resource path="res://addons/scaffold/src/gui/NavBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffold/src/gui/FullScreenPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/scaffold/assets/fonts/main_font_m.tres" type="DynamicFont" id=7]
[ext_resource path="res://addons/scaffold/src/gui/CenteredPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/scaffold/assets/fonts/main_font_s.tres" type="DynamicFont" id=9]
[ext_resource path="res://addons/scaffold/src/gui/AccordionPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/scaffold/assets/fonts/main_font_m_bold.tres" type="DynamicFont" id=11]
[ext_resource path="res://addons/scaffold/src/gui/ScaffoldTextureRect.tscn" type="PackedScene" id=12]

[node name="CreditsScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="FullScreenPanel" parent="." instance=ExtResource( 5 )]
margin_right = 960.0
margin_bottom = 960.0

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel"]
margin_right = 960.0
margin_bottom = 1156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBar" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 960.0
margin_bottom = 192.0
text = "About"

[node name="CenteredPanel" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 196.0
margin_right = 960.0
margin_bottom = 1156.0
rect_min_size = Vector2( 960, 960 )
stretches_vertically = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel"]
margin_right = 960.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer"]
margin_right = 960.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer"]
margin_left = 290.0
margin_top = 55.0
margin_right = 670.0
margin_bottom = 904.0

[node name="Title" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 380.0

[node name="Spacer4" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 190.0
margin_top = 4.0
margin_right = 190.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer4" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 380.0
margin_bottom = 207.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeveloperLogoLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer4"]
margin_left = 72.0
margin_right = 307.0
margin_bottom = 85.0
rect_min_size = Vector2( 235, 85 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DeveloperLogo" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer4/DeveloperLogoLink" instance=ExtResource( 12 )]
margin_right = 235.0
margin_bottom = 85.0
texture_scale = Vector2( 0.5, 0.5 )

[node name="DeveloperNameLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer4"]
margin_top = 85.0
margin_right = 380.0
margin_bottom = 127.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
text = "Created by Snoring Cat LLC"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeveloperUrlLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer4"]
margin_left = 16.0
margin_top = 127.0
margin_right = 364.0
margin_bottom = 169.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
text = "https://snoringcat.games"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 190.0
margin_top = 211.0
margin_right = 190.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="VBoxContainer3" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 69.0
margin_top = 255.0
margin_right = 311.0
margin_bottom = 382.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton2" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer3"]
margin_left = 3.0
margin_right = 238.0
margin_bottom = 85.0
rect_min_size = Vector2( 235, 85 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GodotLogo" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer3/LinkButton2" instance=ExtResource( 12 )]
margin_right = 234.5
margin_bottom = 85.0
rect_min_size = Vector2( 234.5, 85 )
texture = ExtResource( 2 )
texture_scale = Vector2( 0.5, 0.5 )

[node name="LinkButton" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer3"]
margin_top = 85.0
margin_right = 242.0
margin_bottom = 127.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
text = "Made with Godot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer1" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 190.0
margin_top = 386.0
margin_right = 190.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="SpecialThanksContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_top = 430.0
margin_right = 380.0
margin_bottom = 576.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/SpecialThanksContainer"]
margin_left = 76.0
margin_right = 303.0
margin_bottom = 42.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 11 )
text = "Special thanks:"
align = 1
valign = 1

[node name="SpecialThanks" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/SpecialThanksContainer"]
margin_left = 190.0
margin_top = 53.0
margin_right = 190.0
margin_bottom = 95.0
size_flags_horizontal = 4
align = 1
valign = 1

[node name="Spacer5" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/SpecialThanksContainer"]
margin_left = 190.0
margin_top = 106.0
margin_right = 190.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="VBoxContainer2" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_top = 580.0
margin_right = 380.0
margin_bottom = 769.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TermsAndConditionsLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 52.0
margin_right = 328.0
margin_bottom = 42.0
size_flags_horizontal = 4
text = "Terms & Conditions"

[node name="PrivacyPolicyLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 96.0
margin_top = 53.0
margin_right = 284.0
margin_bottom = 95.0
size_flags_horizontal = 4
text = "Privacy Policy"

[node name="SupportLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 134.0
margin_top = 106.0
margin_right = 245.0
margin_bottom = 148.0
size_flags_horizontal = 4
text = "Support"

[node name="Spacer2" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 190.0
margin_top = 159.0
margin_right = 190.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="AccordionPanel" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 773.0
margin_right = 350.0
margin_bottom = 805.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
header_text = "More details"
is_caret_on_left = false
padding = Vector2( 16, 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel/VBoxContainer"]
margin_left = 160.0
margin_right = 160.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DataDeletionButton" type="Button" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel/VBoxContainer"]
margin_left = 60.0
margin_top = 14.0
margin_right = 260.0
margin_bottom = 54.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
text = "Request data deletion"

[node name="DataDeletionButtonPadding" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel/VBoxContainer"]
margin_left = 160.0
margin_top = 58.0
margin_right = 160.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPartyLicensesButton" type="Button" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel/VBoxContainer"]
margin_top = 92.0
margin_right = 320.0
margin_bottom = 142.0
rect_min_size = Vector2( 320, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "Third-party licenses"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingBottom" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 190.0
margin_top = 809.0
margin_right = 190.0
margin_bottom = 849.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
size_flags_vertical = 3

[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer4/DeveloperLogoLink" to="." method="_on_snoring_cat_games_link_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer4/DeveloperNameLink" to="." method="_on_snoring_cat_games_link_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer4/DeveloperUrlLink" to="." method="_on_snoring_cat_games_link_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer3/LinkButton2" to="." method="_on_godot_link_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer3/LinkButton" to="." method="_on_godot_link_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2/TermsAndConditionsLink" to="." method="_on_TermsAndConditionsLink_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2/PrivacyPolicyLink" to="." method="_on_PrivacyPolicyLink_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2/SupportLink" to="." method="_on_SupportLink_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel/VBoxContainer/DataDeletionButton" to="." method="_on_DataDeletionButton_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel/VBoxContainer/ThirdPartyLicensesButton" to="." method="_on_third_party_licenses_button_pressed"]
